--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <hr class="mt-3 mb-3">
 
+    <img src="docs/bs5dm-social.png" class="d-block m-auto" width="640" height="320">
+
     <div class="row row-cols-1">
       <div class="col">
 
@@ -63,22 +65,22 @@
         <p>This body of work explores three methods described in the <i>"<a href="https://vinorodrigues.github.io/bootstrap-dark/">.. Definitive Guide ..</a>"</i> piece:</p>
 
         <ol>
-          <li class="my-3"><code><b>bootstrap-night</b></code> - Two independent theme CSS files, auto-loaded, but with JS to offer toggle button and media query awareness,
+          <li class="my-3"><p><code><b>bootstrap-night</b></code> - Two independent theme CSS files, auto-loaded, but with JS to offer toggle button and media query awareness,
             <ul>
               <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-night.md">Quick Start Guide</a></li>
             </ul>
-          </li>
-          <li class="my-3" value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button,
+            </p></li>
+          <li class="my-3" value="3"><p><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button,
             <ul>
               <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-nightshade.md">Quick Start Guide</a></li>
               <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/darkmode.js.md"><tt>darkmode.js</tt> Reference</a></li>
             </ul>
-        </li>
-          <li class="my-3"><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.
+            </p></li>
+          <li class="my-3"><p><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.
             <ul>
               <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-dark.md">Quick Start Guide</a></li>
             </ul>
-          </li>
+            </p></li>
         </ol>
       </div>
     </div>
@@ -131,22 +133,59 @@
 
     <p>There are a few additional techniques that can be used, but these would use the same patterns as above, but with slight variations.  For example:</p>
     <ol>
-      <li class="my-3" value="2"><code><b>bootstrap-nightfall</b></code> - A Bootstrap plugin; add it in after the <tt>bootstrap.css</tt> to make Bootstrap dark.</li>
-      <li class="my-3" value="3">
+      <li class="my-3" value="2"><p>
+        <code><b>bootstrap-nightfall</b></code> - A Bootstrap plugin; add it in after the <tt>bootstrap.css</tt> to make Bootstrap dark.
+
+        <ul>
+          <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-nightfall.md">Quick Start Guide</a></li>
+        </ul>
+
+        </p></li>
+
+
+      <li class="my-3" value="3"><p>
         <i>(b)</i>
         <code><b>bootstrap-blackbox</b></code> <img src="https://img.shields.io/badge/NEW-red" alt="New!"> -
           The <code>bootstrap-nightshade</code> example shows how one can use a whole-document class to drive the theme,
           and using the <code>darkmde.js</code> library can further enhance the experience by providing an interactive selection
-          whilst still hounoring the <tt>prefers-color-scheme</tt> media query.</p>
+          whilst still honoring the <tt>prefers-color-scheme</tt> media query.</p>
+
         <p>But using classes comes with its own conundrum.  If the choice is to use data attribues,
           then the <code><b>bootstrap-blackbox.css</b></code> file can be used.</p>
-        <a href="examples/cheatsheet-blackbox.html" class="btn btn-sm btn-danger">See Example</a>
-      </li>
-      <li class="my-3" value="4">
+
+          <ul>
+            <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-blackbox.md">Quick Start Guide</a></li>
+            <li><a href="examples/cheatsheet-blackbox.html" class="btn btn-sm btn-danger">See Example</a></li>
+          </ul>
+
+        </p></li>
+
+
+      <li class="my-3" value="4"><p>
         <i>(b)</i>
         <code><b>bootstrap-unlit</b></code> - The default <code>bootstrap-dark.css</code> file is set that light if default/author preference, and dark is the optional.</p>
-        <p>The <code><b>bootstrap-unlit.css</b></code> file gives one the same outcome, but with dark as the default/author preference.</p>
-      </li>
+
+        <p>The <code><b>bootstrap-unlit.css</b></code> file gives one the same outcome, but with dark as the default/author preference, and light is the optional.
+
+        <ul>
+          <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-unlit.md">Quick Start Guide</a></li>
+        </ul>
+
+        </p></li>
+
+
+      <li class="my-3" value="4"><p>
+        <i>(c)</i>
+        <code><b>bootstrap-dark-plugin</b></code> <img src="https://img.shields.io/badge/NEW-red" alt="New!"> -
+        The <code>bootstrap-dark-plugin.css</code> is essensially the <code>bootstrap-dark.css</code> without the original <code>bootstrap.css</code>.
+        i.e., just the media query and then the dark color scheme.</p>
+        <p>This is useful if you want to use the original CSS or even if you want to use an alternative Bootstrap CSS, but also want to dark-mode enable that.
+
+        <ul>
+          <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-dark-plugin.md">Quick Start Guide</a></li>
+        </ul>
+
+        </p></li>
     </ol>
 
     <hr class="my-5">
