Fix "prove" typo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <h2>The Dark Mode Conundrum</h2>
 
-        <p>Dark mode is not easy ... I discussed <i>(and proove)</i> this concept at length back in May 2020 in my quasi-white-paper
+        <p>Dark mode is not easy ... I discussed <i>(and prove)</i> this concept at length back in May 2020 in my quasi-white-paper
           <a href="https://vinorodrigues.github.io/bootstrap-dark/">The Definitive Guide to Dark Mode and Bootstrap 4</a>
           <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark">GitHub</a>.)</i> And subsequently also churned the
           Bootstrap 5 variant <i>(This page!)</i> <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub</a>.)</i></p>
